--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "moment": "^2.24.0",
     "mongoose": "^5.5.1",
     "nodemon": "^1.18.11"
   }
