--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/ambikarajesh/inventory-mangement#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "compression": "^1.7.4",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
+    "helmet": "^3.16.0",
     "moment": "^2.24.0",
     "mongoose": "^5.5.1",
     "nodemon": "^1.18.11"
