--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^3.16.0",
     "moment": "^2.24.0",
     "mongoose": "^5.5.1",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.11"
   }
 }
