--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/ambikarajesh/inventory-mangement#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "helmet": "^3.16.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.1",
     "morgan": "^1.9.1",
